# al-jal-ttak-kkal-sen

./: .env.example  .gitignore  .gitmodules  .oxfmtrc.jsonc  README.md  compose.yaml  graphiti.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
config/: graphiti.yaml
graphiti/: config.yaml
node/opencode-ajtks/: index.ts  package.json
node/opencode-ajtks/src/: index.ts
node/pi-ajtks/: package.json
node/pi-ajtks/extensions/: hindsight.ts
node/pi-ajtks/skills/: web-fetch.ts  web-search.ts
node/pi-hindsight/: index.ts
opencode/: opencode.jsonc
opencode/agent/prompt/: title.txt
pi-ajtks/: package.json
pi-ajtks/extensions/: grep.ts  hindsight.ts  temperature.ts
pi-ajtks/skills/agent-skills-dev/: SKILL.md
pi-ajtks/skills/agent-skills-dev/references/: SPEC_SUMMARY.md
pi-ajtks/skills/agent-skills-python-dev/: SKILL.md
pi-ajtks/skills/agent-skills-review/: SKILL.md
pi-ajtks/skills/agent-skills-review/references/: REVIEW_CHECKLIST.md
pi-ajtks/skills/agent-skills-review/scripts/: review.py
pi-ajtks/skills/ollama-web-fetch/: SKILL.md
pi-ajtks/skills/ollama-web-fetch/scripts/: fetch.py
pi-ajtks/skills/ollama-web-search/: SKILL.md
pi-ajtks/skills/pi-ajtks-extension-dev/: SKILL.md
pi-ajtks/skills/pi-ajtks-extension-dev/scripts/: check.py
python/opencode-retainer/: pyproject.toml
python/opencode-retainer/src/opencode_retainer/: cli.py  hindsight.py  lock.py  opencodedb.py  settings.py  state.py
skills/ollama-web-fetch/: SKILL.md
skills/ollama-web-search/: SKILL.md
skills/ollama-web-search/scripts/: search.py
src/al_jal_ttak_kkal_sen/cli/: setup.py
tools/: pyproject.toml
tools/src/tools/cli/: setup.py
