[project]
name = "al-jal-ttak-kkal-sen"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "hindsight-api-slim>=0.5.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.0",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.10"]

[tool.uv.workspace]
members = ["tools"]

[tool.pyright]
typeCheckingMode = "strict"
reportImplicitOverride = true
include = ["pi-ajtks/skills/**/*.py", "tools/src/**/*.py"]

[tool.ruff]
target-version = "py314"
include = [
    "pi-ajtks/skills/**/*.py",
    "pyproject.toml",
    "tools/src/**/*.py",
    "tools/pyproject.toml",
]
exclude = ["external"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "COM812",
    "COM819",
    "D",
    "EM101",
    "EM102",
    "PLR2004",
    "S110",
    "S310",
    "S603",
    "S607",
    "SIM105",
    "T201",
    "TRY003",
]
